# ollama-assist

./: .gitignore  Dockerfile  README.md  implement_v3.py  pyproject.toml  setup.py
.github/workflows/: build-deb.yml  lint.yml  python-app.yml  release.yml
ollama_assistant/: cli.py  commands.py  config.py  history.py  logger.py  search.py  state.py  ui.py  updater.py  utils.py
tests/: test_commands.py  test_config.py  test_history.py
