[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-assistant"
version = "0.1.0"
description = "An AI assistant CLI tool powered by local Ollama models"
authors = [{name = "You"}]
dependencies = [
    "ollama>=0.2.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "ddgs>=9.14.0",
    "pyyaml>=6.0",
    "pyperclip>=1.8.0",
    "pygments>=2.15.0",
    "psutil>=5.9.0",
    "black>=23.0.0",
    "chromadb>=0.4.0",
    "requests>=2.20.0",
    "markdown>=3.0.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "docker>=7.0.0"
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "flake8>=6.0.0"
]

[project.scripts]
ollama-assist = "ollama_assistant.cli:main"

[tool.setuptools.packages.find]
include = ["ollama_assistant*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "W", "F", "I", "C", "B"]
ignore = ["E501", "B008"]
